--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -53,6 +53,7 @@
     <script src="{{ STATIC_URL }}bootstrap-3.3.2/js/bootstrap.min.js"></script>
     <script src="{{ STATIC_URL }}js/mustache.min.js"></script>
     <script src="{{ STATIC_URL }}js/react-0.13.2.min.js"></script>
+    {# <script src="https://fb.me/react-0.13.2.js"></script> #}
     <script src="{{ STATIC_URL }}js/site.js"></script>
 
     <script>
