--- a/chendian/templates/frontend/book/index.html
+++ b/chendian/templates/frontend/book/index.html
@@ -7,6 +7,6 @@
 
 
 {% block extra_js %}
-<script src="{{ STATIC_URL }}js/build/book_list.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/book_list.js"> </script>
 {% endblock extra_js %}
 
