--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -9,5 +9,5 @@
 
 
 {% block extra_js %}
-<script src="{{ STATIC_URL }}js/build/book_detail.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/book_detail.js"> </script>
 {% endblock extra_js %}
