--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -2,9 +2,26 @@
 
 
 {% block content %}
-<div class="row" id="content" data-id="{{ id }}"></div>
+<div class "row">
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <div id="content" data-id="{{ id }}"></div>
+      </div>
+    </div>
+  </div>
 
-<div class="row" id="thinkList"></div>
+  <div class="col-md-8">
+    <div class="panel panel-default">
+      <div class="panel-heading">阅读记录</div>
+      <div class="panel-body">
+        <div id="checkin-list"></div>
+      </div>
+      <div class="panel-footer clearfix"></div>
+    </div>
+  </div>
+
+</div>
 {% endblock content %}
 
 
