--- a/chendian/static/css/site.css
+++ b/chendian/static/css/site.css
@@ -39,3 +39,10 @@
 .book-list .book {
   margin: 0 10px 10px 0;
 }
+
+.member .avatar-120 {
+  float: left;
+}
+.member .detail {
+  margin-left: 150px;
+}
