--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -23,7 +23,7 @@
 
 
 {% block extra_js %}
-<script src="{{ STATIC_URL }}js/frontend/userinfo.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/member_detail.js"> </script>
 {% endblock extra_js %}
 
 
