--- a/chendian/static/css/site.css
+++ b/chendian/static/css/site.css
@@ -1,3 +1,6 @@
+/* .body { */
+/*   font-size: 16px; */
+/* } */
 .full-width {
   width: 100%;
   max-width: 100%;
@@ -27,9 +30,16 @@
   padding: 10px 15px;
   border-bottom: 1px solid #eee;
 }
+
+.think-author,
+.checkin-author {
+  color: #0069D6;
+}
 .think-content,
 .checkin-content {
   padding: 5px 10px;
+  line-height: 1.5em;
+  font-size: 16px;
 }
 .think:last-child,
 .checkin:last-child {
@@ -38,6 +48,17 @@
 
 .book-list .book {
   margin: 0 10px 10px 0;
+  width: 200px;
+}
+.book-list .book img {
+  width: 190px;
+  height: 210px;
+}
+.book-list .book span {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .member .avatar-120 {
