--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -57,7 +57,11 @@
   </nav>
 
       <div class="container">
-          {% block content %}{% endblock content %}
+        <div class="row">
+          <div class="col-md-12">
+            {% block content %}{% endblock content %}
+          </div>
+        </div>
       </div>
 
     <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
