--- a/chendian/templates/frontend/book/index.html
+++ b/chendian/templates/frontend/book/index.html
@@ -1,8 +1,7 @@
 {% extends "frontend/base.html" %}
 
 {% block content %}
-<div class="row" id="content">
-</div>
+<div class="col-md-12" id="content"></div>
 {% endblock content %}
 
 
