--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -1,7 +1,7 @@
 {% extends "frontend/base.html" %}
 
 {% block content %}
-<div class="row">
+<div class="row member-detail">
   <div class="col-md-4">
     <div class="panel panel-default">
       <div class="panel-body">
@@ -16,6 +16,7 @@
         <div class="panel-body">
           <div id="checkin-list"></div>
         </div>
+        <div class="panel-footer clearfix"></div>
       </div>
     </div>
 </div>
