--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<div class "row">
+<div class="row book-detail">
   <div class="col-md-4">
     <div class="panel panel-default">
       <div class="panel-body">
