--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -39,7 +39,9 @@
           <li><a href="{% url "frontend:member_list" %}">成员</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
+          {% if request.user.is_staff %}
           <li><a href="{% url "admin123" %}">进入后台管理系统</a><li>
+          {% endif %}
           {% if not request.user.member %}
           <li>
             <a href="#">{{ request.user.username }}</a>
