支持通过编号跳转到成员详情页面. closed #15

--- a/chendian/static/css/site.css
+++ b/chendian/static/css/site.css
@@ -36,9 +36,10 @@
   border-bottom: 1px solid #eee;
 }
 
-.think-author,
-.checkin-author {
-  color: #0069D6;
+.think-author span.time,
+.checkin-author span.time {
+  color: #aaa;
+  padding-left: 5px;
 }
 .think-content,
 .checkin-content {
