--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -8,6 +8,14 @@
         <div id="profile" data-id={{ id }}></div>
       </div>
     </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">读过的书</div>
+      <div class="panel-body">
+        <div id="read-books" data-id={{ id }}></div>
+      </div>
+    </div>
+
   </div>
 
     <div class="col-md-8">
