--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}沉淀书会{% endblock title %} </title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap-3.3.2/css/bootstrap.min.css" />
+    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css" />
     <style>
       body {
@@ -72,10 +73,16 @@
     <script src="{{ STATIC_URL }}js/react-0.13.2.min.js"></script>
     <script src="{{ STATIC_URL }}js/holder.js"></script>
     {# <script src="https://fb.me/react-0.13.2.js"></script> #}
+    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js"></script>
 
     <script>
-
+      $.fn.editable.defaults.ajaxOptions = {type: 'patch', dataType: 'json'}
+      $.fn.editable.defaults.params =  function(params) {
+        //originally params contain pk, name and value
+        params[params.name] = params.value;
+        return params;
+      }
     </script>
 
     {% block extra_js %}{% endblock extra_js %}
