--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -43,16 +43,19 @@
           {% if request.user.is_staff %}
           <li><a href="{% url "admin123" %}">进入后台管理系统</a><li>
           {% endif %}
+
           {% if not request.user.member %}
           <li>
-            <a href="#">{{ request.user.username }}</a>
-          </li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ request.user.username }} <span class="caret"></span></a>
           {% else %}
-          <li>
-            <a href="{% url "frontend:user_info" pk=request.user.member.id %}">
-              {{ request.user.member.nick_name }}</a>
-          </li>
+            <a href="{% url "frontend:user_info" pk=request.user.member.id %}"
+              class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ request.user.username }}
+              {{ request.user.member.nick_name }} <span class="caret"></span></a>
           {% endif %}
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="{% url "change_password" %}">更改密码</a></li>
+            </ul>
+          </li>
           <li><a href="{% url "logout" %}">退出</a></li>
         </ul>
       </div>
