--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -56,10 +56,10 @@
           {% block content %}{% endblock content %}
       </div>
 
-    <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
+    <script src="http://tmp-images.qiniudn.com/chendian/libs/jquery.2.1.3.min.js"></script>
     <script src="{{ STATIC_URL }}bootstrap-3.3.2/js/bootstrap.min.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.datetimepicker.js"></script>
-    <script src="{{ STATIC_URL }}js/mustache.min.js"></script>
+    <script src="http://tmp-images.qiniudn.com/chendian/libs/mustache.min.js"></script>
 
     <script>
       $(document).ready(function() {
