--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -70,12 +70,11 @@
         </div>
       </div>
 
-    <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
+    <script src="http://tmp-images.qiniudn.com/chendian/libs/jquery.2.1.3.min.js"></script>
     <script src="{{ STATIC_URL }}bootstrap-3.3.2/js/bootstrap.min.js"></script>
     {# <script src="{{ STATIC_URL }}js/mustache.min.js"></script> #}
-    <script src="{{ STATIC_URL }}js/react-0.13.2.min.js"></script>
-    <script src="{{ STATIC_URL }}js/holder.js"></script>
-    {# <script src="https://fb.me/react-0.13.2.js"></script> #}
+    <script src="http://tmp-images.qiniudn.com/chendian/libs/react-0.13.2.js"></script>
+    <script src="http://tmp-images.qiniudn.com/chendian/libs/holder.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js"></script>
 
