fix react warning
Warning: Each child in an array or iterator should have a unique "key"
prop. Check the render method of CheckinList. See
http://fb.me/react-warning-keys for more information.

--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -15,9 +15,7 @@
     <div class="panel panel-default">
       <div class="panel-body">
         <div id="profile" data-id="{{ id }}"
-          {% if request.user.is_staff or request.user.member.id == id %}
-            data-editable="true"
-          {% endif %}
+          {% if editable %}data-editable="true"{% endif %}
         ></div>
       </div>
     </div>
