--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -44,16 +44,23 @@
           <li><a href="{% url "admin123" %}">进入后台管理系统</a><li>
           {% endif %}
 
-          {% if not request.user.member %}
           <li>
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ request.user.username }} <span class="caret"></span></a>
+          {% if not request.user.member %}
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+              {{ request.user.username }}<span class="caret"></span>
+            </a>
           {% else %}
-            <a href="{% url "frontend:member_detail" pk=request.user.member.id %}"
-              class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ request.user.username }}
-              {{ request.user.member.nick_name }} <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+              {{ request.user.member.nick_name }}<span class="caret"></span>
+            </a>
           {% endif %}
             <ul class="dropdown-menu" role="menu">
-              <li><a href="{% url "change_password" %}">更改密码</a></li>
+              {% if request.user.member %}
+              <li><a href="{% url "frontend:member_detail" pk=request.user.member.id %}">修改个人信息</a></li>
+              {% else %}
+              <li><a href="#">修改个人信息</a></li>
+              {% endif %}
+              <li><a href="{% url "change_password" %}">修改密码</a></li>
             </ul>
           </li>
           <li><a href="{% url "logout" %}">退出</a></li>
