--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="row book-detail">
-  <div class="col-md-4">
+  <div class="col-md-6">
     <div class="panel panel-default">
       <div class="panel-body">
         <div id="content" data-id="{{ id }}"></div>
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <div class="col-md-8">
+  <div class="col-md-6 checkin-list">
     <div class="panel panel-default">
       <div class="panel-heading">阅读记录</div>
       <div class="panel-body">
