--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -43,7 +43,7 @@
 
   </div>
 
-    <div class="col-md-8">
+    <div class="col-md-8 checkin-list">
       <div class="panel panel-default">
         <div class="panel-heading">打卡记录</div>
         <div class="panel-body">
