--- a/chendian/static/css/site.css
+++ b/chendian/static/css/site.css
@@ -86,3 +86,10 @@
 .member-list li {
   padding-bottom: 5px;
 }
+
+.editable-empty,
+.editable-empty:hover,
+.editable-empty:focus {
+  font-style: normal;
+  color: inherit;
+}
