成员信息页面增加“读过的书". closed #18

--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -37,7 +37,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">读过的书</div>
       <div class="panel-body">
-        <div id="read-books" data-id={{ id }}></div>
+        <div id="read-books" class="text-center" data-id={{ id }}></div>
       </div>
     </div>
 
