clean static files

--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}沉淀书会后台管理{% endblock title %} </title>
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.datetimepicker.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap-3.3.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="http://tmp-images.qiniudn.com/chendian/libs/jquery.datetimepicker.css" />
+    <link rel="stylesheet" href="http://tmp-images.qiniudn.com/chendian/libs/normalize.css" />
+    <link rel="stylesheet" href="http://tmp-images.qiniudn.com/bootstrap-3.3.2/css/bootstrap.min.css" />
+<link href="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/css/fileinput.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css" />
     <style>
       body {
@@ -57,10 +58,10 @@
       </div>
 
     <script src="http://tmp-images.qiniudn.com/chendian/libs/jquery.2.1.3.min.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap-3.3.2/js/bootstrap.min.js"></script>
-    <script src="{{ STATIC_URL }}js/jquery.datetimepicker.js"></script>
+    <script src="http://tmp-images.qiniudn.com/bootstrap-3.3.2/js/bootstrap.min.js"></script>
+    <script src="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
+    <script src="http://tmp-images.qiniudn.com/chendian/libs/jquery.datetimepicker.js"></script>
     <script src="http://tmp-images.qiniudn.com/chendian/libs/mustache.min.js"></script>
-
     <script>
       $(document).ready(function() {
         $("#datetime_start").datetimepicker({
