--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}沉淀书会{% endblock title %} </title>
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap-3.3.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="http://tmp-images.qiniudn.com/chendian/libs/normalize.css" />
+    <link rel="stylesheet" href="http://tmp-images.qiniudn.com/bootstrap-3.3.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/css/fileinput.min.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css" />
     <style>
@@ -78,10 +79,11 @@
       </div>
 
     <script src="http://tmp-images.qiniudn.com/chendian/libs/jquery.2.1.3.min.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap-3.3.2/js/bootstrap.min.js"></script>
+    <script src="http://tmp-images.qiniudn.com/bootstrap-3.3.2/js/bootstrap.min.js"></script>
     {# <script src="{{ STATIC_URL }}js/mustache.min.js"></script> #}
     <script src="http://tmp-images.qiniudn.com/chendian/libs/react-0.13.2.js"></script>
     <script src="http://tmp-images.qiniudn.com/chendian/libs/holder.js"></script>
+    <script src="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js"></script>
 
