--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -46,6 +46,7 @@
 
 
 {% block extra_js %}
+<script src="{{ STATIC_URL }}js/frontend/checkin_list.js"> </script>
 <script src="{{ STATIC_URL }}js/frontend/book_detail.js"></script>
 <script>
   $("#change-cover-input").fileinput({
