--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="http://tmp-images.qiniudn.com/chendian/libs/normalize.css" />
     <link rel="stylesheet" href="http://tmp-images.qiniudn.com/bootstrap-3.3.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/css/fileinput.min.css" />
-    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+    <link href="http://tmp-images.qiniudn.com/x-editable-1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css" />
     <style>
       body {
@@ -78,13 +78,17 @@
         </div>
       </div>
 
+    <footer class="footer">
+      <div class="container"></div>
+    </div>
+
     <script src="http://tmp-images.qiniudn.com/chendian/libs/jquery.2.1.3.min.js"></script>
     <script src="http://tmp-images.qiniudn.com/bootstrap-3.3.2/js/bootstrap.min.js"></script>
     {# <script src="{{ STATIC_URL }}js/mustache.min.js"></script> #}
     <script src="http://tmp-images.qiniudn.com/chendian/libs/react-0.13.2.js"></script>
     <script src="http://tmp-images.qiniudn.com/chendian/libs/holder.js"></script>
     <script src="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+    <script src="http://tmp-images.qiniudn.com/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js"></script>
 
     <script>
