--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -92,12 +92,18 @@
     <script src="{{ STATIC_URL }}js/site.js"></script>
 
     <script>
-      $.fn.editable.defaults.ajaxOptions = {type: 'patch', dataType: 'json'}
+      $.fn.editable.defaults.ajaxOptions = {type: 'patch', dataType: 'json'};
+      $.fn.editable.defaults.emptytext = 'something...';
       $.fn.editable.defaults.params =  function(params) {
         //originally params contain pk, name and value
-        params[params.name] = params.value;
+        var name = params.name;
+        var value = params.value;
+        delete params['name'];
+        delete params['value'];
+        delete params['pk'];
+        params[name] = value;
         return params;
-      }
+      };
     </script>
 
     {% block extra_js %}{% endblock extra_js %}
