--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -86,7 +86,7 @@
     <script src="http://tmp-images.qiniudn.com/bootstrap-3.3.2/js/bootstrap.min.js"></script>
     {# <script src="{{ STATIC_URL }}js/mustache.min.js"></script> #}
     <script src="http://tmp-images.qiniudn.com/chendian/libs/react-0.13.2.js"></script>
-    <script src="http://tmp-images.qiniudn.com/chendian/libs/holder.js"></script>
+    {# <script src="http://tmp-images.qiniudn.com/chendian/libs/holder.js"></script> #}
     <script src="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
     <script src="http://tmp-images.qiniudn.com/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js"></script>
