解决 x-editable 与 react 无法和谐共处的问题 fix #21

--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -94,6 +94,7 @@
     <script>
       $.fn.editable.defaults.ajaxOptions = {type: 'patch', dataType: 'json'};
       $.fn.editable.defaults.emptytext = 'something...';
+      $.fn.editable.defaults.mode = 'inline';
       $.fn.editable.defaults.params =  function(params) {
         //originally params contain pk, name and value
         var name = params.name;
