--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -64,14 +64,15 @@
   // update member avatar
   $("#change-cover-input").on('fileuploaded', function(event, data, previewId, index) {
     var response = data.response;
-    var url = '/api/books/' + $('#content').data('id');
+    var url = '/api/books/' + $('#content').data('id') + '/';
     $.ajax({
       url: url,
       dateType: 'json',
+      contentType: 'application/json',
       type: 'patch',
-      data: {
+      data: JSON.stringify({
         'cover': response.url
-      },
+      }),
       success: function(data) {
         $("#book-cover").prop('src', data.cover);
         console.log('change cover success');
