--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">沉淀书会后台管理</a>
+          <a class="navbar-brand" href="{% url "admin123" %}">后台</a>
         </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
