改进分页功能 closed #23

--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -92,6 +92,7 @@
     <script src="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
     <script src="http://tmp-images.qiniudn.com/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js"></script>
+    <script src="{{ STATIC_URL }}js/frontend/mixins.js"></script>
 
     <script>
       $.fn.editable.defaults.ajaxOptions = {
