small words change

--- a/chendian/templates/login.html
+++ b/chendian/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}登录 - {{ block.super }} {% endblock title %}
+{% block title %}登录 - 沉淀书会 {% endblock title %}
 
 {% block extra_head %}
 <style>
