--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -38,10 +38,11 @@
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="{% url "qq:record_checkin_list" %}">打卡记录</a></li>
-          <li><a href="{% url "qq:analysis_group_by_qq_list" %}">统计分析</a></li>
+          <li><a href="{% url "qq:analysis_group_by_qq_list" %}">打卡天数</a></li>
           <li><a href="{% url "book:book_list" %}">书籍管理</a></li>
           <li><a href="{% url "member:member_list" %}">成员管理</a></li>
           <li><a href="{% url "qq:import_list" %}">导入聊天记录</a></li>
+          <li><a href="{% url "admin123" %}">热门书籍</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="{% url "frontend:book_list" %}">返回首页</a><li>
