自动修改 js 文件名称

--- a/chendian/templates/frontend/book/index.html
+++ b/chendian/templates/frontend/book/index.html
@@ -3,3 +3,9 @@
 {% block content %}
 <div class="col-md-12" id="content"></div>
 {% endblock content %}
+
+
+{% block extra_js %}
+<script src="{{ STATIC_URL }}js/frontend/book_list-83940c28.js"> </script>
+{% endblock extra_js %}
+
