--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -68,6 +68,8 @@
 
 
 {% block extra_js %}
+<script src="{{ STATIC_URL }}js/frontend/checkin_list-0c3641c1.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/member_detail-70872612.js"> </script>
 <script>
   $("#change-avatar-input").fileinput({
     showCaption: false,
