--- a/chendian/templates/frontend/member/index.html
+++ b/chendian/templates/frontend/member/index.html
@@ -12,3 +12,9 @@
   </div>
 
 {% endblock content %}
+
+
+{% block extra_js %}
+<script src="{{ STATIC_URL }}js/frontend/member_list-baf34169.js"> </script>
+{% endblock extra_js %}
+
