--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -51,6 +51,8 @@
 
 
 {% block extra_js %}
+<script src="{{ STATIC_URL }}js/frontend/checkin_list-0c3641c1.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/book_detail-42be7ddb.js"></script>
 <script>
   $("#change-cover-input").fileinput({
     showCaption: false,
