--- a/chendian/templates/qq/record/checkin.html
+++ b/chendian/templates/qq/record/checkin.html
@@ -75,9 +75,21 @@
           {% for record in page_obj.object_list %}
           <tr>
             <td>{{ record.sn|default:"" }}</td>
-            <td>{{ record.qq|default:"" }}</td>
+            {% with record.qq|default:"" as qq %}
+            <td>
+              <a href="{% url "member:member_list" %}?filter_by=qq&filter_value={{ qq }}">
+                {{ qq }}
+              </a>
+            </td>
+            {% endwith %}
             <td>{{ record.nick_name|default:"" }}</td>
-            <td>{{ record.book_name|default:"" }}</td>
+            {% with record.book_name|default:"" as book_name %}
+            <td>
+              <a href="{% url "book:book_list" %}?filter_by=name&filter_value={{ book_name }}">
+                {{ book_name }}
+              </a>
+            </td>
+            {% endwith %}
             <td>{{ record.think|default:""|slice:":20" }}{% if record.think %}...{% endif %}</td>
             <td>{{ record.posted_at|date:"Y-m-d H:i:s" }}</td>
             <td>
