--- a/chendian/templates/index.html
+++ b/chendian/templates/index.html
@@ -21,7 +21,13 @@
     <tbody>
       {% for item in page_obj.object_list %}
       <tr>
-        <td>{{ item.book_name }}</td>
+        {% with item.book_name|default:"" as book_name %}
+        <td>
+          <a href="{% url "book:book_list" %}?filter_by=name&filter_value={{ book_name }}">
+            {{ book_name }}
+          </a>
+        </td>
+        {% endwith %}
         <td><a href="{% url 'qq:record_checkin_list' %}?filter_by=book_name&filter_value={{ item.book_name|urlencode }}">{{ item.count }}</a></td>
       </tr>
       {% endfor %}
