--- a/chendian/templates/qq/filter_form.html
+++ b/chendian/templates/qq/filter_form.html
@@ -16,6 +16,9 @@
           <option value="book_name"
           {% if request.GET.filter_by == "book_name" %} selected {% endif %}
           >书名</option>
+          <option value="id"
+          {% if request.GET.filter_by == "id" %} selected {% endif %}
+          >ID</option>
         </select>
     </div>
     <div class="form-group">
