--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -41,6 +41,7 @@
         <ul class="nav navbar-nav">
           <li><a href="{% url "frontend:book_list" %}">书籍</a></li>
           <li><a href="{% url "frontend:member_list" %}">成员</a></li>
+          <li><a href="/feedback/">吐槽</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           {% if request.user.is_staff %}
