--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -83,7 +83,7 @@
 
     <footer class="footer">
       <div class="container"></div>
-    </div>
+    </footer>
 
     <script src="http://tmp-images.qiniudn.com/chendian/libs/jquery.2.1.3.min.js"></script>
     <script src="http://tmp-images.qiniudn.com/bootstrap-3.3.2/js/bootstrap.min.js"></script>
