--- a/chendian/templates/frontend/feedback.html
+++ b/chendian/templates/frontend/feedback.html
@@ -1,12 +1,12 @@
 {% extends "frontend/base.html" %}
 
 
-{% block title %}吐个槽儿~~~{{ super }}{% endblock title %}
+{% block title %}吐个槽儿~~~{{ block.super }}{% endblock title %}
 
 
 {% block content %}
 <p>
-  <img src="http://tmp-images.qiniudn.com/chendian/cattt.jpg" />
+  <img src="http://tmp-images.qiniudn.com/chendian/cattt.jpg" style="max-width: 100%"/>
   欢迎到此吐个槽儿~~~
 </p>
 {% endblock content %}
@@ -14,7 +14,7 @@
 
 {% block extra_js %}
 <!-- 多说评论框 start -->
-  <div class="ds-thread" data-thread-key="feedback" data-title="吐槽~" data-url="http://cd.3sd.me/feedback/"></div>
+  <div class="ds-thread container" data-thread-key="feedback" data-title="吐槽~" data-url="http://cd.3sd.me/feedback/"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
@@ -30,4 +30,3 @@ var duoshuoQuery = {short_name:"chendian"};
   </script>
 <!-- 多说公共JS代码 end -->
 {% endblock extra_js %}
-
