--- a/chendian/templates/frontend/book/index.html
+++ b/chendian/templates/frontend/book/index.html
@@ -1,11 +1,21 @@
 {% extends "frontend/base.html" %}
 
 {% block content %}
+<div class="col-md-4 col-md-offset-4 search-box">
+  <form class="form-inline">
+    <div class="form-group">
+      <input type="text" class="form-control" name="q" placeholder="请输入书籍名称"
+       value="{{ request.GET.q }}">
+    </div>
+    <button type="submit" class="btn btn-primary">喵~</button>
+  </form>
+</div>
+
 <div class="col-md-12" id="content"></div>
 {% endblock content %}
 
 
 {% block extra_js %}
-<script src="{{ STATIC_URL }}js/frontend/book_list-83940c28.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/book_list-87ac76c6.js"> </script>
 {% endblock extra_js %}
 
