完善导入功能，增加导入 Lofter 文章

--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -41,7 +41,7 @@
           <li><a href="{% url "qq:analysis_group_by_qq_list" %}">打卡天数</a></li>
           <li><a href="{% url "book:book_list" %}">书籍管理</a></li>
           <li><a href="{% url "member:member_list" %}">成员管理</a></li>
-          <li><a href="{% url "qq:import_list" %}">导入聊天记录</a></li>
+          <li><a href="{% url "qq:import_list" %}">数据导入</a></li>
           <li><a href="{% url "admin123" %}">热门书籍</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
