前台增加文章列表页面

--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -43,6 +43,7 @@
           <li><a href="{% url "member:member_list" %}">成员管理</a></li>
           <li><a href="{% url "qq:import_list" %}">数据导入</a></li>
           <li><a href="{% url "admin123" %}">热门书籍</a></li>
+          <li><a href="/admin/blog/">文章管理</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="{% url "frontend:book_list" %}">返回首页</a><li>
