--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -46,7 +46,7 @@
           <li><a href="/admin/blog/">文章管理</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="{% url "frontend:book_list" %}">返回首页</a><li>
+          <li><a href="/">返回首页</a><li>
           <li><a href="#">{{ request.user.username }}</a></li>
           <li><a href="{% url "logout" %}">退出</a></li>
         </ul>
