--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -137,8 +137,8 @@
     <script src="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
     <script src="http://tmp-images.qiniudn.com/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
-    <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd.js"></script>
-    <script src="{{ STATIC_URL }}js/frontend/new_post-a211895c.js"></script>
+    <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js">></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-a211895ca3.js">></script>
 
     <script>
     $(function() {
